- Added syntax highlight stylesheet - Changed font-sizes and spacing - Added post Fix for gray overlay on touch with iOS and Sencha Touch

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -92,10 +92,10 @@ body {
 }
     
 .post {
-    margin-bottom: 55px;
+    margin-bottom: 5em;
     
     h3 {
-        font-size: 29px;
+        font-size: 1.5em;
         font-family: 'Lato';
         font-weight: normal;
         margin-bottom: 0.2em;
@@ -109,7 +109,8 @@ body {
     }
     
     .body {
-        font-size: 17px;
+        font-size: 1em;
+        line-height: 1.5;
     }
     
     .body p {
